--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    
 </head>
 <style>
-    @import "./style.css";
+    @import "https://raw.githubusercontent.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/main/style.css";
 
 @import url(https://fonts.googleapis.com/css?family=Lobster);
     body{
