--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    
 </head>
 <style>
-    @import "https://raw.githubusercontent.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/main/style.css";
+    @import "./style.css";
 
 @import url(https://fonts.googleapis.com/css?family=Lobster);
     body{
@@ -100,7 +100,7 @@ div.left{
     left: -12px;
     bottom: 0px;
   }
-    }
+}
   .panel{
     content: "";
     width: 60px;
