--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ div.right{
 
   // Append the newDiv to the container
   container.appendChild(newDiv);
-
+ window.location.href = "https://example.com/another-page.html";
 
     }
 };
