--- a/index.html
+++ b/index.html
@@ -259,9 +259,10 @@ div.right{
 
   // Append the newDiv to the container
   container.appendChild(newDiv);
- window.location.href = "https://example.com/another-page.html";
+
 
     }
+         window.location.href = "https://bubblegumsgadha.github.io/godokiracemeingadhadillegaya.github.io/itsmeandbubblegum.html";
 };
 </script>
 </html>
