--- a/page2.html
+++ b/page2.html
@@ -74,7 +74,7 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="https://raw.githubusercontent.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/main/script2.js"></script>
 
 </body>
 </html>
