--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Responsive Image Carousel ( Animation )</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/main/style2.css">
 
 </head>
 <body>
