--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ div.right{
 
   // Append the newDiv to the container
   container.appendChild(newDiv);
-  window.location.href = "https://bubblegumsgadha.github.io/godokiracemeingadhadillegaya.github.io/itsmeandbubblegum.html";
+  window.location.href = "https://bubblegumsgadha.github.io/godokiracemeingadhadillegaya.github.io/page2.html";
 
     }
        
