--- a/page2.html
+++ b/page2.html
@@ -12,10 +12,10 @@
   <ul class='slider'>
     <li class='item' style="background-image: url('https://cdn.mos.cms.futurecdn.net/dP3N4qnEZ4tCTCLq59iysd.jpg')">
       <div class='content'>
-        <h2 class='title'>"Lossless Youths"</h2>
-        <p class='description'> Lorem ipsum, dolor sit amet consectetur
-        adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
-        praesentium nisi. Id laboriosam ipsam enim.  </p>
+       <h2 class='title'>"03/03/2024 When Two Different Souls Met"</h2>
+        <p class='description'>When Gadha Proposed The Most prittiest and beautiful Souled Girl He Ever Met Their Hearts Matched And Two Different Souls Collided With Each other .
+          Except The Fact They have Seen The Deep feelings Inside Their,
+          Their Eyes which lighted the flame of love for each others.  </p>
         <button>Read More</button>
       </div>
     </li>
