--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster);
     body{
   font-family: 'Lobster', cursive;
-  background: url(https://github.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/blob/main/Page1.jpg);
+  background: url(https://github.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/blob/main/Page1.jpg?raw=true);
   background-size: cover;
   -webkit-font-smoothing: antialiased;
 }
