--- a/page2.html
+++ b/page2.html
@@ -233,6 +233,14 @@ main {
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <!-- partial -->
+  <script>
+    const slider = document.querySelector('.slider');
+function activate(e) {
+  const items = document.querySelectorAll('.item');
+  e.target.matches('.next') && slider.append(items[0])
+  e.target.matches('.prev') && slider.prepend(items[items.length-1]);
+}
+document.addEventListener('click',activate,false);</script>
   <script  src="https://raw.githubusercontent.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/main/script2.js"></script>
 
 </body>
