--- a/page2.html
+++ b/page2.html
@@ -181,18 +181,17 @@ main {
     <li class='item' style="background-image: url('https://i.redd.it/tc0aqpv92pn21.jpg')">
       <div class='content'>
         <h2 class='title'>"Estrange Bond"</h2>
-        <p class='description'> Lorem ipsum, dolor sit amet consectetur
-        adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
-        praesentium nisi. Id laboriosam ipsam enim.  </p>
+        <p class='description'> Through All The Hard Times ,She Kept Me Attached To Her Soul And The Closest.
+        Like A Guiding light,She Always Showed Me Correct Path And Kept Me Safe From Bad Ones.</p>
         <button>Read More</button>
       </div>
     </li>
     <li class='item' style="background-image: url('https://wharferj.files.wordpress.com/2015/11/bio_north.jpg')">
       <div class='content'>
-        <h2 class='title'>"The Gate Keeper"</h2>
-        <p class='description'> Lorem ipsum, dolor sit amet consectetur
-        adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
-        praesentium nisi. Id laboriosam ipsam enim.  </p>
+        <h2 class='title'>"The Miracle"</h2>
+        <p class='description'> When God Had Decided To Get Them Together For The First Time Gadha Waited For Her, He Kept Waiting While Everyone Said Its A Prank But Gadha Knew
+          That His Life His Going To Change After Meeting Her.. He Decided He Finally Saw The Humbleness And Kindness And Unconidionital Love In Her Eyes First Time Seeing Her he Decided
+        That Hell Live His Rest Of Life With Her A True Loving And Genuine Girl And Soulmate He Ever Found In His Life.  </p>
         <button>Read More</button>
       </div>
     </li>
