--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     margin-left: -200px ;
 }
 
-
+.label{
+    color : white;
+}
 
 .wrap{
   width: 200px;
@@ -201,7 +203,7 @@ div.right{
 <body>
    
     <div id="login">
-        <label for="">Username</label><br>
+        <label for="" >Username</label><br>
         <input type="text" placeholder="username" id="userid"><br><br>
         <label for="">Which Was The Color Of Outfit Gadha and Bubblegum Wore When He proposed Her ?</label><br>
         <input type="password" placeholder="password" id="password"><br><br>
