--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@ div.right{
 
   // Append the newDiv to the container
   container.appendChild(newDiv);
+setTimeout(() => {
+  console.log("this is the second message");
+}, 7000);
   window.location.href = "https://bubblegumsgadha.github.io/godokiracemeingadhadillegaya.github.io/page2.html";
 
     }
