--- a/page2.html
+++ b/page2.html
@@ -169,7 +169,7 @@ main {
 <!-- partial:index.partial.html -->
 <main>
   <ul class='slider'>
-    <li class='item' style="background-image: url('https://cdn.mos.cms.futurecdn.net/dP3N4qnEZ4tCTCLq59iysd.jpg')">
+    <li class='item' style="background-image: url('https://github.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/blob/main/IMG_0969.JPG?raw=true')">
       <div class='content'>
        <h2 class='title'>"03/03/2024 When Two Different Souls Met"</h2>
         <p class='description'>When Gadha Proposed The Most prittiest and beautiful Souled Girl He Ever Met Their Hearts Matched And Two Different Souls Collided With Each other .
