--- a/page2.html
+++ b/page2.html
@@ -178,7 +178,7 @@ main {
         <button>Read More</button>
       </div>
     </li>
-    <li class='item' style="background-image: url('https://i.redd.it/tc0aqpv92pn21.jpg')">
+    <li class='item' style="background-image: url('https://github.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/blob/main/IMG_0916.JPG?raw=true')">
       <div class='content'>
         <h2 class='title'>"Estrange Bond"</h2>
         <p class='description'> Through All The Hard Times ,She Kept Me Attached To Her Soul And The Closest.
@@ -186,7 +186,7 @@ main {
         <button>Read More</button>
       </div>
     </li>
-    <li class='item' style="background-image: url('https://wharferj.files.wordpress.com/2015/11/bio_north.jpg')">
+    <li class='item' style="background-image: url('https://github.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/blob/main/IMG_3090.JPG?raw=true')">
       <div class='content'>
         <h2 class='title'>"The Miracle"</h2>
         <p class='description'> When God Had Decided To Get Them Together For The First Time Gadha Waited For Her, He Kept Waiting While Everyone Said Its A Prank But Gadha Knew
