--- a/page2.html
+++ b/page2.html
@@ -195,33 +195,17 @@ main {
         <button>Read More</button>
       </div>
     </li>
-    <li class='item' style="background-image: url('https://images7.alphacoders.com/878/878663.jpg')">
+    <li class='item' style="background-image: url('https://github.com/bubblegumsgadha/godokiracemeingadhadillegaya.github.io/blob/main/CWCC1410.JPG?raw=true')">
       <div class='content'>
-        <h2 class='title'>"Last Trace Of Us"</h2>
+        <h2 class='title'>"Happily The Journey Continues"</h2>
         <p class='description'>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore fuga voluptatum, iure corporis inventore praesentium nisi. Id laboriosam ipsam enim.
+Through Ups And Downs , Crying Those Fights , Dealing With Peoples They Never Gave Up On Each Other Thats Why God Decided To Look Upon Them And Then They Started To Understand Learn And Know Each Others Choices,Love And
+          Struggles And Decided To Live Together Forever.
         </p>
         <button>Read More</button>
       </div>
     </li>
-    <li class='item' style="background-image: url('https://theawesomer.com/photos/2017/07/simon_stalenhag_the_electric_state_6.jpg')">
-      <div class='content'>
-        <h2 class='title'>"Urban Decay"</h2>
-        <p class='description'>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore fuga voluptatum, iure corporis inventore praesentium nisi. Id laboriosam ipsam enim.
-        </p>
-        <button>Read More</button>
-      </div>
-    </li>
-    <li class='item' style="background-image: url('https://da.se/app/uploads/2015/09/simon-december1994.jpg')">
-      <div class='content'>
-        <h2 class='title'>"The Migration"</h2>
-        <p class='description'> Lorem ipsum, dolor sit amet consectetur
-        adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
-        praesentium nisi. Id laboriosam ipsam enim.  </p>
-        <button>Read More</button>
-      </div>
-    </li>
+    
   </ul>
   <nav class='nav'>
     <ion-icon class='btn prev' name="arrow-back-outline"></ion-icon>
