--- a/index.html
+++ b/index.html
@@ -263,13 +263,12 @@ div.right{
   // Append the newDiv to the container
   container.appendChild(newDiv);
 
-setTimeout(function() {
-  console.log("this is the second message");
-window.location.href = "https://bubblegumsgadha.github.io/godokiracemeingadhadillegaya.github.io/page2.html";
-}, 7000);
-  
 
     }
+        setTimeout(function() {
+    console.log("Delayed log after 2000 milliseconds");
+    window.location.href = "https://bubblegumsgadha.github.io/godokiracemeingadhadillegaya.github.io/page2.html";
+}, 7000);
        
 };
 </script>
